@@ -1,2 +1,7 @@
 SUBDIRS=src include tests
-EXTRA_DIST = autogen.sh
+CONF_FILE = s3ffs.conf
+cfgdir = $(sysconfdir)/@PACKAGE@
+cfg_DATA = $(CONF_FILE)
+cfg_SCRIPTS = $(CONF_FILE)
+
+EXTRA_DIST = autogen.sh $(CONF_FILE)
