@@ -1,3 +1,8 @@
+2012-12-14	Paul Ionkin   <paul.ionkin@gmail.com>
+	
+	* Add configuration file support.
+	* Add "--version" command line parameter.
+
 2012-12-13	Paul Ionkin   <paul.ionkin@gmail.com>
 
 	* Perform initial HEAD request to make sure bucket exists 
